[package]
name = "prime-numbers-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
dashmap = "5.4.0"

[profile.release]
opt-level = 3
panic= "abort"
lto = true
codegen-units = 1